# imgtoy

./: .gitignore  Cargo.toml  README.md  option-v2.yaml  option.yaml  run.sh
src/: ffmpeg.rs  main.rs  source.rs
src/clap/: mod.rs
src/logging/: alt.rs
src/parsers/: mod.rs  palette.rs  util.rs
src/parsers/effects/: mod.rs
src/parsers/modifiers/: mirror.rs  rotation.rs
src/parsers/ordered/: mod.rs
src/parsers/system/tools/: complex_primitive.rs  mod.rs  parameter_range.rs
src/parsers/v2/: effects.rs  mod.rs  structure.rs
src/parsers/v2/effects/: error_propagator.rs  gradient_map.rs  mod.rs  ordered.rs  quantize_hue.rs  simple.rs
src/parsers/v2/ordered/: mod.rs  palette.rs
src/parsers/v2/ordered/modifiers/: checker.rs  mirror.rs  mod.rs  rotation.rs  simple.rs
src/parsers/v2/ordered/strategies/: common.rs  diagonal.rs  increase.rs  mod.rs  orientation.rs  wrapping.rs
src/parsers/v2/palette/: chroma.rs  hue.rs  lum.rs  mod.rs
src/parsers/v2/structure/: meta.rs  mod.rs  value.rs
src/utils/: image.rs
src/utils/resource/: mod.rs
src/utils/resource/ffmpeg/: processor.rs  utils.rs
src/utils/resource/image/: mod.rs  parser.rs
