[package]
name = "imgtoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
#image-effects = "0.1.0"
image-effects = { git = "https://github.com/aejenk/image-effects", branch = "databend" }
indicatif = "0.17.6"
palette = "0.7.2"
rand = { version = "0.9.2", features = ["thread_rng"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = "1.0.185"
serde_yaml = "0.9.25"
ndarray = "0.15.6"
lazy_static = "1.5.0"
ez-ffmpeg = "0.5.3"
mime = "0.3.17"
rayon = "1.11.0"
